--- a/src/FlowOS.Application/FlowOS.Application.csproj
+++ b/src/FlowOS.Application/FlowOS.Application.csproj
@@ -7,6 +7,11 @@
     <ProjectReference Include="..\FlowOS.Workflows\FlowOS.Workflows.csproj" />
     <ProjectReference Include="..\FlowOS.Security\FlowOS.Security.csproj" />
     <ProjectReference Include="..\FlowOS.Agents\FlowOS.Agents.csproj" />
+    <ProjectReference Include="..\FlowOS.Infrastructure\FlowOS.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
   </ItemGroup>
 
   <PropertyGroup>
