--- a/src/FlowOS.StateMachines/FlowOS.StateMachines.csproj
+++ b/src/FlowOS.StateMachines/FlowOS.StateMachines.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FlowOS.Domain\FlowOS.Domain.csproj" />
     <ProjectReference Include="..\FlowOS.Events\FlowOS.Events.csproj" />
+    <ProjectReference Include="..\FlowOS.Core\FlowOS.Core.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
